# llm-agent-security-benchmark

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  STRUCTURE_ASSESSMENT.md  THESIS_ENHANCEMENTS.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: security_eval.yml
agent_runtime/: audit.py  config.py  context.py  main.py  metrics.py  orchestrator.py  policy_meta.py
benchmark/: baselines.py  report.py  result_schema.json  runner.py  schema.py  scoring.py
benchmark/scenarios/: scenarios.yaml
ci/: thresholds.yaml
docs/: ARCHITECTURE.md  CHANGELOG_THESIS.md  OBSERVABILITY.md  POLICY_AUTHORING.md  PORTFOLIO_SUMMARY.md  RESULT_SCHEMA.md  SCENARIOS.md  SECURITY_CLAIMS.md  SUBMISSION_CHECKLIST.md  THREAT_MODEL.md  TOOLS.md  architecture.md  benchmark_methodology.md  enterprise_security_review.md  extending.md  hireability_assets.md  policy_design.md  reporting.md  reproducibility.md  threat-model.md
docs/demo/: DEMO_SCRIPT.md
gateway/: approvals.py  pdp_client.py  pep.py  validators.py
scripts/: make_canaries.py  report_results.py  run_ablations.sh  run_eval_matrix.sh  seed_docs.py
tests/: test_ablations.py  test_approval_semantics.py  test_audit_correlation.py  test_benchmark_metadata.py  test_gateway_policy_enforcement.py  test_http_adapter_security.py  test_http_path_policy.py  test_metrics.py  test_result_schema_validator.py  test_summary_schema.py
tools/: db.py  docs.py  http.py  http_real.py  registry.py  tickets.py
(+14 files in other folders)
