[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-agent-runtime-benchmark"
version = "1.0.0+thesis"
description = "Policy-enforced tool-use runtime for LLM agents + reproducible prompt-injection benchmark and CI security gate."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "httpx>=0.27",
  "PyYAML>=6.0",
  "orjson>=3.10",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]
report = [
  "matplotlib>=3.8",
]

[tool.setuptools]
packages = ["agent_runtime", "tools", "gateway", "benchmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
